@@ -1,14 +1,12 @@
 package edu.mit.compilers.codegen.codes;
 
+import java.util.List;
+
 import edu.mit.compilers.ast.AST;
-import edu.mit.compilers.codegen.names.Value;
 import edu.mit.compilers.codegen.names.LValue;
-import edu.mit.compilers.codegen.names.MemoryAddress;
+import edu.mit.compilers.codegen.names.Value;
 import edu.mit.compilers.codegen.names.Variable;
 import edu.mit.compilers.dataflow.operand.Operand;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 public abstract class HasOperand extends Instruction {
     public HasOperand(AST source, String comment) {
@@ -27,14 +25,14 @@ public abstract class HasOperand extends Instruction {
 
     public abstract List<Value> getOperandValues();
 
-    public abstract boolean replace(Value oldName, Value newName);
+    public abstract boolean replaceValue(Value oldName, Value newName);
 
     public List<Variable> getOperandScalarVariables() {
         return getOperandValues()
                 .stream()
                 .filter(abstractName -> abstractName instanceof Variable)
                 .map(value -> (Variable) value)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<LValue> getOperandLValues() {
@@ -42,6 +40,6 @@ public abstract class HasOperand extends Instruction {
                 .stream()
                 .filter(abstractName -> (abstractName instanceof LValue))
                 .map(abstractName -> (LValue) abstractName)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
